--- a/css/styles.css
+++ b/css/styles.css
@@ -27,9 +27,7 @@ body {
   font-size: 14px;
   letter-spacing: 0.03em;
 }
-/* section {
-  outline: 2px solid tomato;
-} */
+
 /* знімае крапочкі на переліку */
 .list {
   list-style: none;
@@ -58,7 +56,6 @@ a {
 /* Верхня линия */
 .header {
   background-color: var(--primary-bg-color);
-  /* height: 80px; */
 }
 .main-header {
   display: flex;
@@ -140,9 +137,10 @@ a {
   margin-left: auto;
 }
 .site-phone .link {
-  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  display: inline-flex;
+  align-items: center;
 }
 .site-phone :hover,
 .site-phone :focus {
@@ -153,8 +151,6 @@ a {
   height: 16px;
   width: 16px;
   margin-right: 10px;
-  position: relative;
-  top: 3px;
 }
 /* Шапка */
 /* hero */
@@ -251,6 +247,7 @@ section {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  margin-bottom: 30px;
 }
 
 .antenna::before {
@@ -291,10 +288,7 @@ section {
   letter-spacing: 0.03em;
   text-align: center;
 }
-.card-desc {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
+
 /* h3 */
 .subject-titel {
   margin: 0;
@@ -336,45 +330,53 @@ section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.team > .item {
-  background-color: var(--primary-bg-color);
-  border: 1px solid var(--bg-card-color);
-  border-radius: 4px;
-  box-shadow: 0px 1px, 0px, 2px, rgba(0, 0, 0, 0.2);
-}
+
 .team.list {
   display: flex;
 }
 .team .item + .item {
   margin-left: 30px;
 }
-/* socials */
-.socials {
-  width: 206px;
-  margin-right: auto;
-  margin-left: auto;
+.item-desc {
+  padding: 0;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  box-shadow: 0px 2px 0px 1px rgba(0, 0, 0, 0.2),
+    0px 1px 0px 1px rgba(0, 0, 0, 0.14), 0px 1px 0px 3px rgba(0, 0, 0, 0.12);
 }
+.card-desc {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: var(--primary-bg-color);
+}
+/* socials */
 .socials-item {
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  align-items: center;
 }
-.button-icon {
-  border: none;
+.socials-icon {
+  display: block;
   width: 44px;
   height: 44px;
+  border-radius: 50%;
   color: var(--primary-icon-color);
   background-color: var(--primary-bg-color);
-  cursor: pointer;
-}
-.button-icon:hover,
-.button-icon:focus {
-  color: var(--primary-bg-color);
-  border-radius: 50%;
-  background-color: var(--accent-text-color);
 }
 .soc-icon {
   height: 20px;
   width: 20px;
   fill: currentColor;
+  position: relative;
+  top: 12px;
+  left: 12px;
+}
+.socials-icon:hover {
+  border-radius: 50%;
+  color: var(--primary-bg-color);
+  background-color: var(--accent-text-color);
 }
 .socials-item .item + .item {
   margin-left: 10px;
@@ -443,6 +445,11 @@ section {
 .filter .item + .item {
   margin-left: 8px;
 }
+.element {
+  display: block;
+  border: 1px solid var(--bg-group-color);
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.1);
+}
 .projekt {
   display: flex;
   flex-wrap: wrap;
@@ -453,23 +460,11 @@ section {
   width: calc((100% - 90px) / 3);
   margin-top: 30px;
   margin-left: 30px;
-  /* margin-right: 15px;
-  margin-left: 15px;
-  margin-bottom: 30px; */
 }
 .projekt .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.item-desc {
-  margin: 0;
-  border-left: 1px solid var(--bg-group-color);
-  border-bottom: 1px solid var(--bg-group-color);
-  border-right: 2px solid var(--bg-group-color);
-  padding-left: 24px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 24px;
-}
+
 /* Постоянные клиенты */
 
 .client .item + .item {
@@ -521,19 +516,22 @@ address {
 }
 .foot {
   display: flex;
+  align-items: baseline;
 }
 .soc-foot {
-  width: 206px;
-  margin-top: 12px;
   margin-left: 70px;
+  align-items: baseline;
 }
 .site-foot {
   width: 231px;
 }
 .footer .titel {
+  margin: 0;
+  margin-bottom: 20px;
+
   color: var(--primary-bg-color);
 
-  width: 700;
+  /* width: 700; */
   font-size: 14px;
   line-height: 1.2;
 }
