--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ a {
 /* hero */
 .hero {
   background-color: var(--bg-hero-color);
-  /* max-width: 1600px; */
+  max-width: 1600px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -373,7 +373,8 @@ section {
   top: 12px;
   left: 12px;
 }
-.socials-icon:hover {
+.socials-icon:hover,
+.socials-icon:focus {
   border-radius: 50%;
   color: var(--primary-bg-color);
   background-color: var(--accent-text-color);
@@ -447,8 +448,12 @@ section {
 }
 .element {
   display: block;
-  border: 1px solid var(--bg-group-color);
-  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.1);
+  /* border: 1px solid var(--bg-group-color); */
+}
+.element:hover,
+.element:focus {
+  box-shadow: 1px 4px 0px 6px rgba(0, 0, 0, 0.16),
+    0px 4px 0px 4px rgba(0, 0, 0, 0.06), 0px 1px 0px 1px rgba(0, 0, 0, 0.12);
 }
 .projekt {
   display: flex;
@@ -460,6 +465,9 @@ section {
   width: calc((100% - 90px) / 3);
   margin-top: 30px;
   margin-left: 30px;
+  border-left: 1px solid var(--bg-group-color);
+  border-bottom: 1px solid var(--bg-group-color);
+  border-right: 2px solid var(--bg-group-color);
 }
 .projekt .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
